--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,5 +1,5 @@
 stages:
   main:
     cmd:
-      - echo ${parameters.parameter_name} && python script.py
+      - echo ${parameters.parameter_name} && python script.py && echo "The stage is done by now, here is a success message\n"
     outs: []
