Add dvc.lock, params.yaml

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,23 +1,25 @@
 stages:
   stage1:
     cmd:
-      - echo ${parameters.parameter_name} && python script.py && touch 1.txt
+    - echo ${parameters.parameter_name} && python script.py && touch 1.txt
     deps:
-      - script.py
+    - script.py
     params:
-      - parameters.parameter_name
+    - parameters.parameter_name
     outs:
-      - 1.txt
+    - 1.txt
   stage2:
     cmd:
-      - echo stage2 && touch 2.txt
+    - echo stage2 && touch 2.txt
     deps:
-      - 1.txt
+    - 1.txt
     outs:
-      - 2.txt
+    - 2.txt
   stage3:
     cmd:
-      - echo stage3
+    - echo stage3
     deps:
-      - 2.txt
+    - 2.txt
     outs: []
+params:
+- dvclive/params.yaml
